refactor(agent): update FilterDTO default sort order and enhance PageResponse constructor